--- a/egcs_1_1_branch/gcc/f/intdoc.in
+++ b/egcs_1_1_branch/gcc/f/intdoc.in
@@ -297,7 +297,7 @@ DEFDOC (DLOG, "Natural logarithm (archaic).", ARCHAIC (LOG, Log))
 DEFDOC (CDLOG, "Natural logarithm (archaic).", ARCHAIC (LOG, Log))
 
 DEFDOC (LOG10, "Common logarithm.", "\
-Returns the common (base 10) logarithm of @var{@1@}, which must
+Returns the common logarithm (base 10) of @var{@1@}, which must
 be greater than zero.
 
 The inverse of this function is @samp{10. ** LOG10(@var{@1@})}.
