conifgure: regenerate         * config/i386/t-sco5 (crti.o): New target.         * config/i386/sco5.h (STARTFILE_SPEC): Include crti.o when         linking -shared.         * configure.in (i[34567]86-*-sco3.2v5*): Add crti.o.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25480 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -1340,7 +1340,7 @@ changequote([,])dnl
 		else
 			tmake_file=i386/t-sco5
 		fi
-		extra_parts="crtbegin.o crtend.o crtbeginS.o crtendS.o"
+		extra_parts="crti.o crtbegin.o crtend.o crtbeginS.o crtendS.o"
 		;;
 changequote(,)dnl
 	i[34567]86-*-sco3.2v4*) 	# 80386 running SCO 3.2v4 system
