* i386/t-sco5 (crti.o): New target.         * i386/sco5.h (STARTFILE_SPEC): Include crti.o when         linking -shared.         * configure.in (i[34567]86-*-sco3.2v5*): Add crti.o.         * configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@25484 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/egcs_1_1_branch/gcc/configure.in
+++ b/egcs_1_1_branch/gcc/configure.in
@@ -1055,7 +1055,7 @@ for machine in $build $host $target; do
 		else
 			tmake_file=i386/t-sco5
 		fi
-		extra_parts="crtbegin.o crtend.o crtbeginS.o crtendS.o"
+		extra_parts="crti.o crtbegin.o crtend.o crtbeginS.o crtendS.o"
 		;;
 	i[[34567]]86-*-sco3.2v4*) 	# 80386 running SCO 3.2v4 system
 		xm_file="${xm_file} i386/xm-sco.h"
