* cpp.in: New.  Better cpp shell script.         * cpp.sh: Delete.         * Makefile.in (cpp.sh): Build from cpp.in
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@25569 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/egcs_1_1_branch/gcc/Makefile.in
+++ b/egcs_1_1_branch/gcc/Makefile.in
@@ -2287,6 +2287,10 @@ install-cpp: cpp.sh
 	  $(INSTALL_PROGRAM) -m 755 cpp.sh $(prefix)/$(cpp_install_dir)/cpp; \
 	else true; fi
 
+cpp.sh: $(srcdir)/cpp.in Makefile
+	sed -e 's%@GCC@%'$(GCC_INSTALL_NAME)'%' $(srcdir)/cpp.in > xcpp.T
+	mv -f xcpp.T cpp.sh
+
 uninstall-cpp:
 	-rm -f $(bindir)/cpp
 	-if [ x$(cpp_install_dir) != x ]; then \
