--- a/libf2c/libF77/Makefile.in
+++ b/libf2c/libF77/Makefile.in
@@ -103,6 +103,128 @@ ${srcdir}/configure: configure.in
 VersionF.o: Version.c
 	$(CC) -c $(ALL_CFLAGS) -o $@ $(srcdir)/Version.c
 
+F77_aloc.o: F77_aloc.c
+main.o: main.c
+s_rnge.o: s_rnge.c
+abort_.o: abort_.c
+getarg_.o: getarg_.c
+iargc_.o: iargc_.c
+getenv_.o: getenv_.c
+signal_.o: signal_.c
+s_stop.o: s_stop.c
+s_paus.o: s_paus.c
+system_.o: system_.c
+cabs.o: cabs.c
+derf_.o: derf_.c
+derfc_.o: derfc_.c
+erf_.o: erf_.c
+erfc_.o: erfc_.c
+sig_die.o: sig_die.c
+exit_.o: exit_.c
+setarg.o: setarg.c
+setsig.o: setsig.c
+pow_ci.o: pow_ci.c
+pow_dd.o: pow_dd.c
+pow_di.o: pow_di.c
+pow_hh.o: pow_hh.c
+pow_ii.o: pow_ii.c
+pow_ri.o:  pow_ri.c
+pow_zi.o: pow_zi.c
+pow_zz.o: pow_zz.c
+pow_qq.o:  pow_qq.c
+c_abs.o: c_abs.c
+c_cos.o: c_cos.c
+c_div.o: c_div.c
+c_exp.o: c_exp.c
+c_log.o: c_log.c
+c_sin.o: c_sin.c
+c_sqrt.o: c_sqrt.c
+z_abs.o: z_abs.c
+z_cos.o: z_cos.c
+z_div.o: z_div.c
+z_exp.o: z_exp.c
+z_log.o: z_log.c
+z_sin.o: z_sin.c
+z_sqrt.o: z_sqrt.c
+r_abs.o: r_abs.c
+r_acos.o: r_acos.c
+r_asin.o: r_asin.c
+r_atan.o: r_atan.c
+r_atn2.o: r_atn2.c
+r_cnjg.o: r_cnjg.c
+r_cos.o: r_cos.c
+r_cosh.o: r_cosh.c
+r_dim.o: r_dim.c
+r_exp.o: r_exp.c
+r_imag.o: r_imag.c
+r_int.o: r_int.c
+r_lg10.o: r_lg10.c
+r_log.o: r_log.c
+r_mod.o: r_mod.c
+r_nint.o: r_nint.c
+r_sign.o: r_sign.c
+r_sin.o: r_sin.c
+r_sinh.o: r_sinh.c
+r_sqrt.o: r_sqrt.c
+r_tan.o: r_tan.c
+r_tanh.o: r_tanh.c
+d_abs.o: d_abs.c
+d_acos.o: d_acos.c
+d_asin.o: d_asin.c
+d_atan.o: d_atan.c
+d_atn2.o: d_atn2.c
+d_cnjg.o: d_cnjg.c
+d_cos.o: d_cos.c
+d_cosh.o: d_cosh.c
+d_dim.o: d_dim.c
+d_exp.o: d_exp.c
+d_imag.o: d_imag.c
+d_int.o: d_int.c
+d_lg10.o: d_lg10.c
+d_log.o: d_log.c
+d_mod.o: d_mod.c
+d_nint.o: d_nint.c
+d_prod.o: d_prod.c
+d_sign.o: d_sign.c
+d_sin.o: d_sin.c
+d_sinh.o: d_sinh.c
+d_sqrt.o: d_sqrt.c
+d_tan.o: d_tan.c
+d_tanh.o: d_tanh.c
+i_abs.o: i_abs.c
+i_dim.o: i_dim.c
+i_dnnt.o: i_dnnt.c
+i_indx.o: i_indx.c
+i_len.o: i_len.c
+i_mod.o: i_mod.c
+i_nint.o: i_nint.c
+i_sign.o: i_sign.c
+h_abs.o:  h_abs.c
+h_dim.o: h_dim.c
+h_dnnt.o: h_dnnt.c
+h_indx.o: h_indx.c
+h_len.o: h_len.c
+h_mod.o: h_mod.c
+h_nint.o:  h_nint.c
+h_sign.o: h_sign.c
+l_ge.o: l_ge.c
+l_gt.o: l_gt.c
+l_le.o: l_le.c
+l_lt.o: l_lt.c
+hl_ge.o: hl_ge.c
+hl_gt.o: hl_gt.c
+hl_le.o: hl_le.c
+hl_lt.o: hl_lt.c
+ef1asc_.o: ef1asc_.c
+ef1cmc_.o: ef1cmc_.c
+s_cat.o: s_cat.c
+s_cmp.o: s_cmp.c
+s_copy.o: s_copy.c
+lbitbits.o: lbitbits.c
+lbitshft.o: lbitshft.c
+qbitbits.o: qbitbits.c
+qbitshft.o: qbitshft.c
+
 # Not quite all these actually do depend on f2c.h...
 $(MISC) $(POW) $(CX) $(DCX) $(REAL) $(DBL) $(INT) $(HALF) $(CMP) $(EFL) \
   $(CHAR) $(F90BIT): $(F2C_H_DIR)/f2c.h $(G2C_H_DIR)/g2c.h
